Closed
Bug 652052
Opened 15 years ago
Closed 15 years ago
don't create |nsImageLoader|s for null border-images
Categories
(Core :: Layout, defect, P5)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla6
People
(Reporter: dbaron, Unassigned)
Details
Attachments
(1 file)
|
2.00 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
I've had this patch in my tree for ages -- at some point I stuck some assertions in nsImageLoader and discovered that there are cases where we create image loaders for null images, which seems silly. This fixes that.
Attachment #527725 -
Flags: review?(bzbarsky)
Comment 1•15 years ago
|
||
Comment on attachment 527725 [details] [diff] [review]
patch
r=me
Attachment #527725 -
Flags: review?(bzbarsky) → review+
| Reporter | ||
Comment 2•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Priority: -- → P5
Resolution: --- → FIXED
Target Milestone: --- → mozilla6
You need to log in
before you can comment on or make changes to this bug.
Description
•