Don't construct image loaders for null border-image.  (Bug 652052)  r=bzbarsky